# CardioVision-rPPG

./: .gitignore  App.tsx  Hackathon chosen  Problem statement.txt  HomeScreen.tsx  Problem statement.MD  ProcessingScreen.tsx  README.md  RecordScreen.tsx  ResultsScreen.tsx  VideoPlaybackScreen.tsx  app.js  evm_magnifier.py  index.ts  main.py  package-lock.json  pyproject.toml  research.md  rppg.py  rppgService.ts  server.py
backend/: Problem statement.MD  benchmark_results.json  deep_rppg.py  evaluate_benchmark.py  evm_magnifier.py  main.py  pyproject.toml  roi_pipeline.py  rppg_core.py  stream_server.py  streaming_pipeline.py  tremor_analysis.py  triage_agent.py
backend/output/: processed_20260404_124438.npz  signals_20260404_124438.csv  signals_20260404_124438.npz
mobileAppExpo/: app.json  package-lock.json  package.json
mobileAppExpo/api/: reportGenerator.ts  rppgService.ts
mobileAppExpo/app/: _layout.tsx  camera.tsx  index.tsx  processing.tsx  record.tsx  results.tsx
mobileAppExpo/app/(tabs)/: _layout.tsx  camera.tsx  index.tsx  results.tsx
mobileAppExpo/app/api/: rppgService.ts
mobileAppExpo/app/state/: scanSession.ts
mobileAppExpo/app/theme/: index.ts
mobileAppExpo/components/ui/: icon-symbol.tsx
mobileAppExpo/constants/: theme.ts
mobileAppExpo/src/api/: reportGenerator.ts  rppgService.ts
mobileAppExpo/src/state/: scanSession.ts
mobileAppExpo/src/theme/: index.ts
mobileAppExpo/state/: scanSession.ts
mobileAppExpo/theme/: index.ts
