[project]
name = "cardiovision-rppg"
version = "0.1.0"
description = "Remote Photoplethysmography (rPPG) research pipeline for non-contact heart rate estimation from facial video"
readme = ""
requires-python = ">=3.12"
dependencies = [
    "mediapipe>=0.10.33",
    "numpy>=2.3.0",
    "opencv-python>=4.13.0.92",
    "scipy>=1.16.0",
]
